--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "url": "https://github.com/illutek/-tkalfshuys/issues"
   },
   "devDependencies": {
-    "gulp": "~3.9.1",
-    "gulp-jsmin": "~0.1.5",
     "del": "~2.2.2",
+    "gulp": "~3.9.1",
     "gulp-cache": "~0.4.5",
+    "gulp-clean-css": "~2.0.12",
+    "gulp-jsmin": "~0.1.5",
     "gulp-plumber": "~1.1.0",
-    "gulp-sass": "~2.3.2",
     "gulp-rename": "~1.2.2",
-    "gulp-clean-css": "~2.0.12"
+    "gulp-sass": "~2.3.2",
+    "gulp-sourcemaps": "^2.6.0"
   }
 }
